k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsu
  labels:
    app.kubernetes.io/part-of: demo-devops-nodejs
