k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-nodejs
  namespace: devsu
  labels:
    app.kubernetes.io/name: demo-devops-nodejs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-devops-nodejs
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
