k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-devops-nodejs
  namespace: devsu
  labels:
    app.kubernetes.io/name: demo-devops-nodejs
spec:
  ingressClassName: nginx
  rules:
    - host: demo-devops.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: demo-devops-nodejs
                port:
                  number: 80
